--- a/IT Eng Team/agile-kanban.html
+++ b/IT Eng Team/agile-kanban.html
@@ -100,8 +100,6 @@
                                                 </div>
                                             </div>
                                             </a>
-                                        </div>
-                                        <div class="dropdown-grid-item bg-white" >                                                                                                                              
                                             <a target="_self" class="dropdown-item"
                                             href="../qlik-replicate.html" style="text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
@@ -109,6 +107,18 @@
                                                 <div class="logo-color drop-title">Qlik Replicate CICD</div>
                                                 <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
                                                    Streamline data replication <br> with CI/CD for seamless <br> DevOps integration.
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
+                                        <div class="dropdown-grid-item bg-white" >
+                                            <a target="_self" class="dropdown-item"
+                                            href="../Innovatie Integration/qlik-sense-cicd.html" style="text-align: center;">
+                                             <div style="text-align: left; border-radius: 8px; width: 200px;">
+                                                <img  style="height: 30px; width: 60px" src="../Qlik_Logo.png"></img>
+                                                <div class="logo-color drop-title">Qlik Sense CICD</div>
+                                                <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
+                                                   Automate Qlik Sense app <br> promotion with change tracking <br> &amp; approval workflows.
                                                 </div>
                                             </div>
                                             </a>
@@ -252,12 +262,48 @@
                                                 </div> 
                                               </div>            
                                             </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/informatica-to-qlik-talend.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Informatica to Qlik Talend</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Migrate from Informatica PowerCenter to Qlik Talend.<br> Reduce licensing costs and modernize your ETL.
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Migrate to Qlik Sense</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Convert Tableau, Power BI &amp; Cognos reports<br> to Qlik Sense for smarter analytics.
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/qlik-sense-cicd.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Qlik Sense CICD</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Automate Qlik Sense app promotion with<br> change tracking and approval workflows.
+                                            </div>
+                                          </div>
+                                        </a>
                                         </div>
                                         <div class="dropdown-grid-item radius-right-side bg-light-subtle">
                                             <h6 class="drop-heading">For IT Engineering Team</h6>
                                             <a href="../IT Eng Team/dev_ssp_idp.html" class="dropdown-link px-0">
                                                 <span class="me-2">
-                             
+
                             </span>
                             <div class="drop-title" style="font-size: 13px;">Developer Self Service Portal (IDP)</div>
                                             </a>
@@ -392,8 +438,6 @@
                                                 </div>
                                             </div>
                                             </a>
-                                        </div>
-                                        <div class="dropdown-grid-item bg-white" >                                                                                                                              
                                             <a target="_self" class="dropdown-item"
                                             href="../qlik-replicate.html" style="text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
@@ -401,6 +445,18 @@
                                                 <div class="logo-color drop-title">Qlik Replicate CICD</div>
                                                 <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
                                                    Streamline data replication <br> with CI/CD for seamless <br> DevOps integration.
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
+                                        <div class="dropdown-grid-item bg-white" >
+                                            <a target="_self" class="dropdown-item"
+                                            href="../Innovatie Integration/qlik-sense-cicd.html" style="text-align: center;">
+                                             <div style="text-align: left; border-radius: 8px; width: 200px;">
+                                                <img  style="height: 30px; width: 60px" src="../Qlik_Logo.png"></img>
+                                                <div class="logo-color drop-title">Qlik Sense CICD</div>
+                                                <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
+                                                   Automate Qlik Sense app <br> promotion with change tracking <br> &amp; approval workflows.
                                                 </div>
                                             </div>
                                             </a>
@@ -470,7 +526,7 @@
                                     </div>
                                     <div class="dropdown-grid-item last-item bg-light-subtle radius-right-side">
                                         <a href="#">
-                                            <img src="Products.jpg" alt="add" class="img-fluid rounded-custom"  />
+                                            <img src="../Products.jpg" alt="add" class="img-fluid rounded-custom"  />
                                         </a>
                                     </div>
                                 </div>
@@ -543,6 +599,42 @@
                                                 <br> supports Nexus, Jenkins for your Talend project needs.
                                             </div> 
                                           </div>            
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/informatica-to-qlik-talend.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Informatica to Qlik Talend</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Migrate from Informatica PowerCenter to Qlik Talend.<br> Reduce licensing costs and modernize your ETL.
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Migrate to Qlik Sense</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Convert Tableau, Power BI &amp; Cognos reports<br> to Qlik Sense for smarter analytics.
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/qlik-sense-cicd.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Qlik Sense CICD</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Automate Qlik Sense app promotion with<br> change tracking and approval workflows.
+                                            </div>
+                                          </div>
                                         </a>
                                     </div>
                                     <div class="dropdown-grid-item radius-right-side bg-light-subtle">
@@ -632,7 +724,7 @@
                                                 </div>
                                                 <div class="dropdown-grid-item last-item bg-light-subtle radius-right-side">
                                                     <a href="#">
-                                                        <img src="5.jpg" alt="add" class="img-fluid rounded-custom"  />
+                                                        <img src="../5.jpg" alt="add" class="img-fluid rounded-custom"  />
                                                     </a>
                                                 </div>
                                             </div>
