--- a/Innovatie Integration/talend-qlik-integration.html
+++ b/Innovatie Integration/talend-qlik-integration.html
@@ -89,7 +89,7 @@
                                             <a target="_self" class="dropdown-item"
                                             href="qlik-talend.html" style="text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
-                                                <img  style="height: 30px; width: 100px;" src="qlik talend logo.png"></img>
+                                                <img  style="height: 30px; width: 100px;" src="../qlik talend logo.png"></img>
                                                 <div class="logo-color drop-title">Qlik Talend CICD</div>
                                                 <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
                                                   Automate Talend deployments to <br> 
@@ -97,12 +97,10 @@
                                                 </div>
                                             </div>
                                             </a>
-                                        </div>
-                                        <div class="dropdown-grid-item bg-white" >                                                                                                                              
                                             <a target="_self" class="dropdown-item"
                                             href="qlik-replicate.html" style="text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
-                                                <img  style="height: 30px; width: 60px" src="Qlik Replicate logo.png"></img>
+                                                <img  style="height: 30px; width: 60px" src="../Qlik Replicate logo.png"></img>
                                                 <div class="logo-color drop-title">Qlik Replicate CICD</div>
                                                 <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
                                                    Streamline data replication <br> with CI/CD for seamless <br> DevOps integration.
@@ -110,9 +108,21 @@
                                             </div>
                                             </a>
                                         </div>
+                                        <div class="dropdown-grid-item bg-white" >
+                                            <a target="_self" class="dropdown-item"
+                                            href="qlik-sense-cicd.html" style="text-align: center;">
+                                             <div style="text-align: left; border-radius: 8px; width: 200px;">
+                                                <img  style="height: 30px; width: 60px" src="../Qlik_Logo.png"></img>
+                                                <div class="logo-color drop-title">Qlik Sense CICD</div>
+                                                <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
+                                                   Automate Qlik Sense app <br> promotion with change tracking <br> &amp; approval workflows.
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
                                         <div class="dropdown-grid-item last-item bg-light-subtle radius-right-side">
                                             <a href="#">
-                                                <img src="qlik-talend-illustration..png" alt="add" class="img-fluid rounded-custom"/>
+                                                <img src="../qlik-talend-illustration..png" alt="add" class="img-fluid rounded-custom"/>
                                             </a>
                                         </div>
                                     </div>
@@ -247,14 +257,50 @@
                                                 Seamless integration with Talend cloud, TAC for your jobs deployments
                                                 <br> supports Nexus, Jenkins for your Talend project needs.
                                             </div> 
-                                          </div>            
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/informatica-to-qlik-talend.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Informatica to Qlik Talend</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Migrate from Informatica PowerCenter to Qlik Talend.<br> Reduce licensing costs and modernize your ETL.
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Migrate to Qlik Sense</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Convert Tableau, Power BI &amp; Cognos reports<br> to Qlik Sense for smarter analytics.
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/qlik-sense-cicd.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Qlik Sense CICD</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Automate Qlik Sense app promotion with<br> change tracking and approval workflows.
+                                            </div>
+                                          </div>
                                         </a>
                                     </div>
                                     <div class="dropdown-grid-item radius-right-side bg-light-subtle">
                                         <h6 class="drop-heading">For IT Engineering Team</h6>
                                         <a href="../IT Eng Team/dev_ssp_idp.html" class="dropdown-link px-0">
                                             <span class="me-2">
-                         
+
                         </span>
                         <div class="drop-title" style="font-size: 13px;">Developer Self Service Portal (IDP)</div>
                                         </a>
@@ -390,8 +436,6 @@
                                                 </div>
                                             </div>
                                             </a>
-                                        </div>
-                                        <div class="dropdown-grid-item bg-white" >                                                                                                                              
                                             <a target="_self" class="dropdown-item"
                                             href="../qlik-replicate.html" style="text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
@@ -399,6 +443,18 @@
                                                 <div class="logo-color drop-title">Qlik Replicate CICD</div>
                                                 <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
                                                    Streamline data replication <br> with CI/CD for seamless <br> DevOps integration.
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
+                                        <div class="dropdown-grid-item bg-white" >
+                                            <a target="_self" class="dropdown-item"
+                                            href="qlik-sense-cicd.html" style="text-align: center;">
+                                             <div style="text-align: left; border-radius: 8px; width: 200px;">
+                                                <img  style="height: 30px; width: 60px" src="../Qlik_Logo.png"></img>
+                                                <div class="logo-color drop-title">Qlik Sense CICD</div>
+                                                <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
+                                                   Automate Qlik Sense app <br> promotion with change tracking <br> &amp; approval workflows.
                                                 </div>
                                             </div>
                                             </a>
@@ -468,7 +524,7 @@
                                     </div>
                                     <div class="dropdown-grid-item last-item bg-light-subtle radius-right-side">
                                         <a href="#">
-                                            <img src="Products.jpg" alt="add" class="img-fluid rounded-custom"  />
+                                            <img src="../Products.jpg" alt="add" class="img-fluid rounded-custom"  />
                                         </a>
                                     </div>
                                 </div>
@@ -540,7 +596,43 @@
                                                 Seamless integration with Talend cloud, TAC for your jobs deployments
                                                 <br> supports Nexus, Jenkins for your Talend project needs.
                                             </div> 
-                                          </div>            
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/informatica-to-qlik-talend.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Informatica to Qlik Talend</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Migrate from Informatica PowerCenter to Qlik Talend.<br> Reduce licensing costs and modernize your ETL.
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Migrate to Qlik Sense</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Convert Tableau, Power BI &amp; Cognos reports<br> to Qlik Sense for smarter analytics.
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="../Innovatie Integration/qlik-sense-cicd.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Qlik Sense CICD</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Automate Qlik Sense app promotion with<br> change tracking and approval workflows.
+                                            </div>
+                                          </div>
                                         </a>
                                     </div>
                                     <div class="dropdown-grid-item radius-right-side bg-light-subtle">
@@ -630,7 +722,7 @@
                                                 </div>
                                                 <div class="dropdown-grid-item last-item bg-light-subtle radius-right-side">
                                                     <a href="#">
-                                                        <img src="5.jpg" alt="add" class="img-fluid rounded-custom"  />
+                                                        <img src="../5.jpg" alt="add" class="img-fluid rounded-custom"  />
                                                     </a>
                                                 </div>
                                             </div>
@@ -922,6 +1014,9 @@
                                             <li><a href="../Innovatie Integration/azure-integration.html" class="text-decoration-none">Microsoft AZURE</a></li>
                                             <li><a href="../Innovatie Integration/gcp-integration.html" class="text-decoration-none">Google Cloud Platform</a></li>
                                             <li><a href="../Innovatie Integration/talend-qlik-integration.html" class="text-decoration-none">Qlik Talend</a></li>
+                                            <li><a href="../Innovatie Integration/informatica-to-qlik-talend.html" class="text-decoration-none">Informatica to Qlik Talend</a></li>
+                                            <li><a href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html" class="text-decoration-none">Migrate to Qlik Sense</a></li>
+                                            <li><a href="../Innovatie Integration/qlik-sense-cicd.html" class="text-decoration-none">Qlik Sense CICD</a></li>
                                         </ul>
                                     </div>
                                 </div>
