--- a/index.html
+++ b/index.html
@@ -287,8 +287,6 @@
                                                 </div>
                                             </div>
                                             </a>
-                                        </div>
-                                        <div class="dropdown-grid-item bg-white" >                                                                                                                              
                                             <a target="_self" class="dropdown-item"
                                             href="qlik-replicate.html" style="text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
@@ -300,6 +298,18 @@
                                             </div>
                                             </a>
                                         </div>
+                                        <div class="dropdown-grid-item bg-white" >
+                                            <a target="_self" class="dropdown-item"
+                                            href="Innovatie Integration/qlik-sense-cicd.html" style="text-align: center;">
+                                             <div style="text-align: left; border-radius: 8px; width: 200px;">
+                                                <img  style="height: 30px; width: 60px" src="Qlik_Logo.png"></img>
+                                                <div class="logo-color drop-title">Qlik Sense CICD</div>
+                                                <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
+                                                   Automate Qlik Sense app <br> promotion with change tracking <br> &amp; approval workflows.
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
                                         <div class="dropdown-grid-item last-item bg-light-subtle radius-right-side">
                                             <a href="#">
                                                 <img src="qlik-talend-illustration..png" alt="add" class="img-fluid rounded-custom"/>
@@ -307,12 +317,12 @@
                                         </div>
                                     </div>
                                 </div>
-                            </li> 
+                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
                                 <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white" style="margin-left: 180px;">
                                     <div class="dropdown-grid rounded-custom width-full-3" >
-                                        <div class="dropdown-grid-item bg-white" >            
+                                        <div class="dropdown-grid-item bg-white" >
                                             <div style="font-size: 12px; margin-left:14px">A Shift from DevOps to DevEx</div>
                                             <a target="_self" class="dropdown-item"
                                             href="product/modernize-devops.html" style="text-align: center;">
@@ -426,7 +436,7 @@
                                             
                                             </a>
                                             <a target="_self" class="dropdown-item"
-                                            href="Innovatie Integration/talend-qlik-integration.html">         
+                                            href="Innovatie Integration/talend-qlik-integration.html">
                                               <span class="me-2">
                                                 <img  style="height: 38px; width:38px" src="qlik-talend-logo.svg"></img>
 
@@ -436,8 +446,46 @@
                                                 <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
                                                     Seamless integration with Talend cloud, TAC for your jobs deployments
                                                     <br> supports Nexus, Jenkins for your Talend project needs.
-                                                </div> 
-                                              </div>            
+                                                </div>
+                                              </div>
+                                            </a>
+                                            <a target="_self" class="dropdown-item"
+                                            href="Innovatie Integration/informatica-to-qlik-talend.html">
+                                              <span class="me-2">
+                                                <img  style="height: 38px; width:38px" src="qlik-talend-logo.svg"></img>
+                                              </span>
+                                              <div style="margin-left: 12px;">
+                                                <div class="drop-title">Informatica to Qlik Talend</div>
+                                                <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                    Migrate from Informatica PowerCenter to Qlik Talend.
+                                                    <br> Reduce licensing costs and modernize your ETL.
+                                                </div>
+                                              </div>
+                                            </a>
+                                            <a target="_self" class="dropdown-item"
+                                            href="Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
+                                              <span class="me-2">
+                                                <img  style="height: 38px; width:38px" src="qlik-talend-logo.svg"></img>
+                                              </span>
+                                              <div style="margin-left: 12px;">
+                                                <div class="drop-title">Migrate to Qlik Sense</div>
+                                                <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                    Convert Tableau, Power BI & Cognos reports
+                                                    <br> to Qlik Sense for smarter analytics.
+                                                </div>
+                                              </div>
+                                            </a>
+                                            <a target="_self" class="dropdown-item"
+                                            href="Innovatie Integration/qlik-sense-cicd.html">
+                                              <span class="me-2">
+                                                <img  style="height: 34px; width: 34px" src="qlik-talend-logo.svg"></img>
+                                              </span>
+                                              <div style="margin-left: 12px;">
+                                                <div class="drop-title">Qlik Sense CICD</div>
+                                                <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                    Automate Qlik Sense app promotion with<br> change tracking and approval workflows.
+                                                </div>
+                                              </div>
                                             </a>
                                         </div>
                                         <div class="dropdown-grid-item radius-right-side bg-light-subtle">
@@ -595,8 +643,6 @@
                                                 </div>
                                             </div>
                                             </a>
-                                        </div>
-                                        <div class="dropdown-grid-item bg-white" >                                                                                                                              
                                             <a target="_self" class="dropdown-item"
                                             href="qlik-replicate.html" style="text-align: center;">
                                              <div style="text-align: left; border-radius: 8px; width: 200px;">
@@ -608,6 +654,18 @@
                                             </div>
                                             </a>
                                         </div>
+                                        <div class="dropdown-grid-item bg-white" >
+                                            <a target="_self" class="dropdown-item"
+                                            href="Innovatie Integration/qlik-sense-cicd.html" style="text-align: center;">
+                                             <div style="text-align: left; border-radius: 8px; width: 200px;">
+                                                <img  style="height: 30px; width: 60px" src="Qlik_Logo.png"></img>
+                                                <div class="logo-color drop-title">Qlik Sense CICD</div>
+                                                <div style="font-size: 11px; color: #6b6b6b; line-height: 1.5;">
+                                                   Automate Qlik Sense app <br> promotion with change tracking <br> &amp; approval workflows.
+                                                </div>
+                                            </div>
+                                            </a>
+                                        </div>
                                         <div class="dropdown-grid-item last-item bg-light-subtle radius-right-side">
                                             <a href="#">
                                                 <img src="qlik-talend-illustration..png" alt="add" class="img-fluid rounded-custom"/>
@@ -615,7 +673,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </li> 
+                            </li>
                         <!-- <li><a href="/qlik-talend.html" class="nav-link">Qlik Talend</a></li> -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
@@ -733,18 +791,55 @@
                                         
                                         </a>
                                         <a target="_self" class="dropdown-item"
-                                        href="Innovatie Integration/talend-qlik-integration.html">         
+                                        href="Innovatie Integration/talend-qlik-integration.html">
                                           <span class="me-2">
                                             <img  style="height: 34px; width: 34px" src="Talendlogo.svg"></img>
-
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Talend</div>
                                             <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
                                                 Seamless integration with Talend cloud, TAC for your jobs deployments
                                                 <br> supports Nexus, Jenkins for your Talend project needs.
-                                            </div> 
-                                          </div>            
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="Innovatie Integration/informatica-to-qlik-talend.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Informatica to Qlik Talend</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Migrate from Informatica PowerCenter to Qlik Talend.
+                                                <br> Reduce licensing costs and modernize your ETL.
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Migrate to Qlik Sense</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Convert Tableau, Power BI & Cognos reports
+                                                <br> to Qlik Sense for smarter analytics.
+                                            </div>
+                                          </div>
+                                        </a>
+                                        <a target="_self" class="dropdown-item"
+                                        href="Innovatie Integration/qlik-sense-cicd.html">
+                                          <span class="me-2">
+                                            <img  style="height: 34px; width: 34px" src="qlik-talend-logo.svg"></img>
+                                          </span>
+                                          <div style="margin-left: 12px;">
+                                            <div class="drop-title">Qlik Sense CICD</div>
+                                            <div style="font-size: 12px; color: #6b6b6b; line-height: 1.5;">
+                                                Automate Qlik Sense app promotion with<br> change tracking and approval workflows.
+                                            </div>
+                                          </div>
                                         </a>
                                     </div>
                                     <div class="dropdown-grid-item radius-right-side bg-light-subtle">
@@ -1582,6 +1677,9 @@ No DevOps. No Scripts. Just Click & Deploy.
                                             <li><a href="Innovatie Integration/azure-integration.html" class="text-decoration-none">Microsoft AZURE</a></li>
                                             <li><a href="Innovatie Integration/gcp-integration.html" class="text-decoration-none">Google Cloud Platform</a></li>
                                             <li><a href="Innovatie Integration/talend-qlik-integration.html" class="text-decoration-none">Qlik Talend</a></li>
+                                            <li><a href="Innovatie Integration/informatica-to-qlik-talend.html" class="text-decoration-none">Informatica to Qlik Talend</a></li>
+                                            <li><a href="Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html" class="text-decoration-none">Migrate to Qlik Sense</a></li>
+                                            <li><a href="Innovatie Integration/qlik-sense-cicd.html" class="text-decoration-none">Qlik Sense CICD</a></li>
                                         </ul>
                                     </div>
                                 </div>
